syntax = "proto3";
package web;

option go_package = "web/v1;web";
import "validate/validate.proto";
import "google/api/annotations.proto";

// 通用服务
service Common {
  // 发送短信验证码接口
  //    @Summary 发送短信验证码111222
  rpc SendSms(CommonSendSmsRequest) returns (CommonSendSmsResponse) {
    option (google.api.http) = {
      post: "/api/v1/common/send-sms"
      body: "*"
    };
  }

  // 发送邮件验证码接口
  rpc SendEmail(CommonSendEmailRequest) returns (CommonSendEmailResponse) {
    option (google.api.http) = {
      post: "/api/v1/common/send-email"
      body: "*"
    };
  }

  //俺们就开始的那
  rpc Test(CommonSendTestRequest) returns (CommonSendTestResponse) {
    option (google.api.http) = {
      post: "/api/v1/common/send-test"
      body: "*"
    };
  }
}

// 发送短信验证码接口请求参数
message CommonSendSmsRequest{
  string mobile = 1 [(validate.rules).string.len = 11];
  string channel = 2 [(validate.rules).string = {in: ["login", "register", "forget_account", "change_account", "oauth_bind"]}];
}

// 发送短信验证码接口响应参数
message CommonSendSmsResponse{
  string sms_code = 1;
}

// 发送邮件验证码接口请求参数
message CommonSendEmailRequest{
  string email = 1  [(validate.rules).string.min_len = 6];
}

// 发送邮件验证码接口响应参数
message CommonSendEmailResponse{}

// 发送邮件验证码接口请求参数
message CommonSendTestRequest{
  string email = 1  [(validate.rules).string.min_len = 6];
}

// 发送邮件验证码接口响应参数
message CommonSendTestResponse{}